--- a/P2G2EstructurasDeDatos2021Verano/P2G2EstructurasDeDatos2021Verano.vcxproj
+++ b/P2G2EstructurasDeDatos2021Verano/P2G2EstructurasDeDatos2021Verano.vcxproj
@@ -141,9 +141,10 @@
   <ItemGroup>
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Tools.cpp" />
+    <ClCompile Include="TwoFour.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="2_4_Tree.h" />
+    <ClInclude Include="TwoFour.h" />
     <ClInclude Include="Libraries.h" />
     <ClInclude Include="Menu.h" />
     <ClInclude Include="Node.h" />
