Menú esquelético XD

--- a/P2G2EstructurasDeDatos2021Verano/P2G2EstructurasDeDatos2021Verano.vcxproj
+++ b/P2G2EstructurasDeDatos2021Verano/P2G2EstructurasDeDatos2021Verano.vcxproj
@@ -139,6 +139,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Menu.cpp" />
+    <ClCompile Include="Node.cpp" />
+    <ClCompile Include="NodeData.cpp" />
     <ClCompile Include="Source.cpp" />
     <ClCompile Include="Tools.cpp" />
     <ClCompile Include="TwoFour.cpp" />
