--- a/P2G2EstructurasDeDatos2021Verano/P2G2EstructurasDeDatos2021Verano.vcxproj.filters
+++ b/P2G2EstructurasDeDatos2021Verano/P2G2EstructurasDeDatos2021Verano.vcxproj.filters
@@ -24,6 +24,15 @@
     <ClCompile Include="TwoFour.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Node.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="NodeData.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Menu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="RuntimeException.h">
